# clawd-mood

./: .gitignore  README.en.md  README.md  配置指南.md
.cursor/: hooks.json
agent/: README.md  clawd-agent.js  panel.html
agent/test/: agent.test.js  presence.test.js  today-route.test.js  today.test.js
brand/: _render.py
clawd_mochi/: clawd_mochi.ino
clawd_mood/: clawd_mood.ino
clawd_mood_idf/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
clawd_mood_idf/main/: CMakeLists.txt  app_main.cpp  render_task.cpp  render_task.hpp
desktop/: README.md  clawd-mochi.spec  pyproject.toml  测试清单.md
desktop/clawd_mochi/: __init__.py  __main__.py
desktop/clawd_mochi/core/: config.py  device.py  events.py  firmware.py  flash_runner.py  fmt.py  hookinstall.py  paths.py
desktop/clawd_mochi/ui/: app.py  bind_page.py  firmware_page.py  frameless_win.py  icons.py  main_window.py  presence_page.py  settings_page.py  theme.py  titlebar.py  today_page.py  widgets.py
desktop/tests/: test_config.py  test_device.py  test_events.py  test_firmware.py  test_flash_runner.py  test_format.py  test_hookinstall.py  test_paths.py  test_ui_mainwindow.py  test_ui_titlebar.py
hook/: README.md  clawd-hook.js  cursor-hooks.json.example  device.json  device.json.example  install-global.ps1  状态测试指令.md
hook/test/: event-log.test.js  gating.test.js  last-seen.test.js  semantics.test.js
tools/: bundle_firmware.py
web/: idle-gallery.html  idle-rotation.html
web/expression-editor/: index.html
web/mockups/: agent-today.html  deep-sleep-variants.html  desktop-app.html  (+5 more)
(+22 files in other folders)
